Filter attributes from vanilla container