@@ -5,8 +5,11 @@ import eu.pb4.polymer.api.entity.PolymerEntity;
 import eu.pb4.polymer.impl.networking.PolymerServerProtocol;
 import eu.pb4.polymer.impl.entity.InternalEntityHelpers;
 import net.minecraft.entity.Entity;
+import net.minecraft.entity.EntityType;
 import net.minecraft.entity.EquipmentSlot;
 import net.minecraft.entity.LivingEntity;
+import net.minecraft.entity.attribute.DefaultAttributeContainer;
+import net.minecraft.entity.attribute.DefaultAttributeRegistry;
 import net.minecraft.entity.attribute.EntityAttributeInstance;
 import net.minecraft.item.ItemStack;
 import net.minecraft.network.Packet;
@@ -24,18 +27,24 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 import java.util.*;
 import java.util.function.Consumer;
 
-@SuppressWarnings({"removal"})
 @Mixin(EntityTrackerEntry.class)
 public class EntityTrackerEntryMixin {
     @Shadow
     @Final
     private Entity entity;
 
+    @SuppressWarnings("unchecked")
     @ModifyVariable(method = "sendPackets", at = @At(value = "INVOKE_ASSIGN", target = "Lnet/minecraft/entity/attribute/AttributeContainer;getAttributesToSend()Ljava/util/Collection;"))
     private Collection<EntityAttributeInstance> polymer_sendAttributesOnlyForLivingVirtual(Collection<EntityAttributeInstance> attributes) {
-        if (this.entity instanceof PolymerEntity entity && !InternalEntityHelpers.isLivingEntity(entity.getPolymerEntityType())) {
-            return Collections.emptyList();
+        if (this.entity instanceof PolymerEntity entity) {
+            if (!InternalEntityHelpers.isLivingEntity(entity.getPolymerEntityType())) {
+                return List.of();
+            }
+
+            DefaultAttributeContainer vanillaContainer = DefaultAttributeRegistry.get((EntityType<? extends LivingEntity>) entity.getPolymerEntityType());
+            return attributes.stream().filter(entityAttributeInstance -> vanillaContainer.has(entityAttributeInstance.getAttribute())).toList();
         }
+
         return attributes;
     }
 
